[metadata]
name = fingerflow
version = 0.0.1
author = Jakub Arendac
author_email = jakub.arendac105@gmail.com
description = FingerFlow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jakubarendac/fingerflow
project_urls =
    Bug Tracker = https://github.com/jakubarendac/fingerflow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src