[metadata]
name = fingerflow
version = 3.0.1
author = Jakub Arendac
author_email = jakub.arendac105@gmail.com
description = FingerFlow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jakubarendac/fingerflow
project_urls =
    Bug Tracker = https://github.com/jakubarendac/fingerflow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    Keras-Applications >= 1.0.8
    matplotlib >= 3.4.2
    numpy >= 1.19.5
    opencv-python >= 4.5.3.36
    pandas >= 1.3.1
    scikit-image >= 0.18.3
    scipy >= 1.6.2
    tensorflow >= 2.5.1

[options.packages.find]
where = src